# sidekwest-rs

./: .gitignore  Cargo.toml  makefile  role-ingestion-notes.txt
entities/: Cargo.toml
entities/src/entities/: channel_roles.rs  mod.rs  owners.rs  prelude.rs  roles.rs  user_roles.rs
migration/src/: lib.rs  m20220101_000001_create_role_table.rs  m20240409_040005_create_channel_role_table.rs  m20240412_021008_create_owners_table.rs  m20240412_021450_create_user_roles_table.rs
sidekwest/: Cargo.toml
sidekwest/src/: bot.rs  cli.rs  database.rs  discord.rs  main.rs  schedule.rs  secrecy.rs
sidekwest/src/bot/: role_ingest.rs
sidekwest/src/discord/: api.rs  data.rs
src/: bot.rs  main.rs
