[package]
name = "sidekwest-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
fernet = "0.2.1"
lazy_static = "1.4.0"
nutype = "0.4.0"
poise = "0.6.1"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = "1.0.197"
serde_json = "1.0.115"
shellexpand = "3.1.0"
tokio = { version = "1.36.0", features = ["full"] }
